# contracts/openapi.json
@@ -16,9 +16,60 @@
       },
       "ListingResponse": {
         "properties": {
+          "annual_ground_rent_gbp": {
+            "anyOf": [
+              {
+                "type": "integer"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Annual Ground Rent Gbp"
+          },
+          "annual_service_charge_gbp": {
+            "anyOf": [
+              {
+                "type": "integer"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Annual Service Charge Gbp"
+          },
           "asking_price_gbp": {
-            "title": "Asking Price Gbp",
-            "type": "integer"
+            "anyOf": [
+              {
+                "type": "integer"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Asking Price Gbp"
+          },
+          "bedrooms": {
+            "anyOf": [
+              {
+                "type": "integer"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Bedrooms"
+          },
+          "display_address": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Display Address"
           },
           "external_id": {
             "title": "External Id",
@@ -40,31 +91,73 @@
             "type": "integer"
           },
           "postcode": {
-            "title": "Postcode",
-            "type": "string"
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Postcode"
+          },
+          "price_qualifier": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Price Qualifier"
           },
           "source": {
             "title": "Source",
             "type": "string"
           },
-          "title": {
-            "title": "Title",
-            "type": "string"
+          "tenure_type": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Tenure Type"
           },
           "url": {
             "title": "Url",
             "type": "string"
+          },
+          "years_remaining_on_lease": {
+            "anyOf": [
+              {
+                "type": "integer"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Years Remaining On Lease"
           }
         },
         "required": [
           "id",
           "source",
           "external_id",
-          "title",
-          "asking_price_gbp",
-          "postcode",
           "url",
-          "floor_area_sqm"
+          "display_address",
+          "asking_price_gbp",
+          "price_qualifier",
+          "bedrooms",
+          "postcode",
+          "floor_area_sqm",
+          "tenure_type",
+          "years_remaining_on_lease",
+          "annual_service_charge_gbp",
+          "annual_ground_rent_gbp"
         ],
         "title": "ListingResponse",
         "type": "object"
